# AI_agent

./: .gitignore  config.py  main.py  pyproject.toml  tests.py  tui.py
calculator/: lorem.txt
calculator/pkg/: calculator.py
functions/: call_function.py  config.py  function_schemas.py  get_file_content.py  get_files_info.py  run_python.py  write_file_content.py
