[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai==1.12.1",
    "prompt-toolkit>=3.0.51",
    "python-dotenv==1.1.0",
    "rich>=14.0.0",
    "rich-pixels>=3.0.1",
    "textual>=4.0.0",
]
